--- a/prepros.cfg
+++ b/prepros.cfg
@@ -160,6 +160,26 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "2c5cdca9": {
+          "id": "2c5cdca9",
+          "path": "scss/_grid.scss",
+          "output": "css/_grid.css",
+          "name": "_grid.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
