style(css): add spacing around burger and logo

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -55,22 +55,6 @@
           "parents": [],
           "type": "html"
         },
-        "0c7b55b5": {
-          "id": "0c7b55b5",
-          "path": "css/style.css",
-          "output": "css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "5c62c7ea": {
           "id": "5c62c7ea",
           "path": "js/push-menu.js",
@@ -145,22 +129,6 @@
           "parents": [],
           "type": "sass"
         },
-        "54df2368": {
-          "id": "54df2368",
-          "path": "css/_mixins.css",
-          "output": "css/_mixins-dist.css",
-          "name": "_mixins.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "2c5cdca9": {
           "id": "2c5cdca9",
           "path": "scss/_grid.scss",
@@ -180,6 +148,53 @@
             "7e70da7e"
           ],
           "type": "sass"
+        },
+        "93f48eb5": {
+          "id": "93f48eb5",
+          "path": "scss/_type.scss",
+          "output": "css/_type.css",
+          "name": "_type.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "9b055d03": {
+          "id": "9b055d03",
+          "path": "_layouts/default.html",
+          "output": "_layouts/default.html",
+          "name": "default.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0c7b55b5": {
+          "id": "0c7b55b5",
+          "path": "css/style.css",
+          "output": "css/style-dist.css",
+          "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
