feat(img/scss): add cloud img to the background of the nav

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -184,6 +184,19 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "dbd6ebeb": {
+          "id": "dbd6ebeb",
+          "path": "img/clouds.jpg",
+          "output": "img/clouds.jpg",
+          "name": "clouds.jpg",
+          "category": "IMAGE",
+          "size": 72527,
+          "type": "jpg",
+          "initialSize": 72527,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
