feat(html/scss): add billboard and billboard img

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -197,6 +197,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "b1cee20e": {
+          "id": "b1cee20e",
+          "path": "img/pnn-billboard.jpg",
+          "output": "img/pnn-billboard.jpg",
+          "name": "pnn-billboard.jpg",
+          "category": "IMAGE",
+          "size": 101918,
+          "type": "jpg",
+          "initialSize": 101918,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
